# gmenu2x

./: .gitignore  CMakeLists.txt  buildopts.h.cmakein  configure.in
data/: gmenu2x.conf  input.conf
data/platform/a320/: gmenu2x.conf
data/platform/gcw0/: gmenu2x.conf
data/platform/nanonote/: gmenu2x.conf
data/platform/rs90/: gmenu2x.conf
data/skins/1280x720/Default/: sections  skin.conf
data/skins/240x160/Default/: skin.conf
data/skins/640x480/Default/: icons  imgs
src/: Makefile.am  background.cpp  background.h  battery.cpp  battery.h  brightnessmanager.cpp  brightnessmanager.h  browsedialog.cpp  browsedialog.h  clock.cpp  compat-algorithm.h  compat-filesystem.h  compat-string_view.h  contextmenu.cpp  contextmenu.h  cpu.cpp  cpu.h  dialog.cpp  dirdialog.cpp  dirdialog.h  filedialog.cpp  filedialog.h  filelister.cpp  filelister.h  font.cpp  font.h  font_spec.h  font_stack.cpp  font_stack.h  gmenu2x.cpp  gmenu2x.h  helppopup.cpp  iconbutton.cpp  iconbutton.h  imagedialog.cpp  imagedialog.h  imageio.cpp  inputdialog.cpp  inputdialog.h  inputmanager.cpp  (+50 more)
